# NavigatorAI

./: .gitignore  MIGRATION_COMPLETE.md  README.md  pyproject.toml
agentic_ai/: AMADEUS_FLIGHT_SEARCH_SUCCESS.md  AMADEUS_INTEGRATION_COMPLETE.md  CURRENCY_IMPLEMENTATION_SUCCESS.md  FLIGHT_SEARCH_ENHANCEMENT_SUMMARY.md  FLIGHT_SEARCH_FIX_COMPLETE.md  FLIGHT_SEARCH_FIX_SUMMARY.md  FLIGHT_SEARCH_IN_SUGGESTIONS_COMPLETE.md  LOGGING_RESTORATION_COMPLETE.md  OLLAMA_CONNECTION_FIXES.md  OLLAMA_MIGRATION_GUIDE.md  OLLAMA_MIGRATION_SUCCESS.md  OPENROUTER_FIX_COMPLETE.md  PROJECT_REVIEW_REPORT.md  QUICKSTART_DEEPSEEK.md  README.md  app.py  backend_minimal.py  clear_ports.bat  clear_ports.py  env_template.txt  requirements.txt  run_app.py  run_project.bat  simple_backend.py  start_backend.bat  start_backend.py  start_frontend.bat
agentic_ai/agents/: travel_agent.py
agentic_ai/mcp_server/: ollama_llm.py  openrouter_llm.py  server.py  tools.py
agentic_ai/model/COMPLETE_TRAVEL_MODEL/: adapter_config.json
agentic_ai/model/llama_travel_model_minimal/: README.md  adapter_config.json
agentic_ai/tools/: AmadeusFlightSearchTool.py  BaseAmadeusAPITool.py  CurrencyTool.py  CurrencyTool_fixed.py  CurrencyTool_new.py  FlightSearchTool.py  HotelSearchTool.py  amadeus_flight_search.py  travel_tools.py
