[project]
name = "ERAV3-CapstoneProject"
version = "0.1.0"
dependencies = [
    "aiohttp>=3.8.0",
    "python-dateutil>=2.8.2",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "PyPDF2",
    "streamlit>=1.29.0",
    "huggingface-hub>=0.19.0",
    "sentence-transformers>=2.2.0",
    "overpass>=0.7.0",
    "geopy>=2.3.0",
    "python-weather>=1.0.0",    "forex-python>=1.8.0",
    "currency-converter>=0.5.5",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "Pillow>=10.0.0",
    "python-multipart>=0.0.6",
    "langdetect>=1.0.9",
    "folium>=0.15.0",
    "plotly>=5.17.0",
    "httpx>=0.25.0",
    "numpy>=1.24.0",    "pandas>=2.0.0",
    "nest-asyncio>=1.5.8",
    "rich>=13.0.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "python-jose>=3.3.0",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "datasets",
    "unsloth",
    "peft",
    "protobuf",
    "langchain-anthropic",
    "blinker",
    "altair",
    "typing_extensions",
    "cachetools",
    "click",
    "tornado",
    "toml",
    "multidict",
    "attrs",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
